fixed the gap not reflecting in edge browser

--- a/css/style.css
+++ b/css/style.css
@@ -27,16 +27,17 @@ body nav ul {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 2rem;
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 body nav ul li {
   display: inline;
+  margin: 0rem 1rem;
 }
 body nav ul li:first-child {
   margin-right: auto;
+  padding-left: 0%;
 }
 body nav ul a {
   text-decoration: none;
@@ -69,6 +70,7 @@ body header h1 {
 }
 body .switch {
   display: inline-block;
+  margin-left: -1.5rem;
   width: 4rem;
   height: 2rem;
 }
